...
            longitude: -97.7713,
        },
        primaryType: 'public_swimming_pool',
        primaryTypeDisplayName: { text: 'Swimming pool' },
    },
    'mock-austin-central-library': {
        displayName: { text: 'Austin Central Library' },
        formattedAddress: '710 W Cesar Chavez St, Austin, TX 78701',
        id: 'mock-austin-central-library',
        location: {
            latitude: 30.2654,
            longitude: -97.7518,
        },
...
                            way_points: [0, 1],
                        },
                        {
                            distance: 3900,
                            duration: 1420,
                            instruction:
                                'Turn right to avoid monitored intersections',
                            maneuver: {
                                location: idealCoordinates[1],
                            },
                            name: '',
                            type: 1,
                            way_points: [1, 2],
...
