...
                        freeDriveIsActive
                            ? handleStopFreeDrive
                            : handleStartFreeDrive
                    }
                    testID={
                        freeDriveIsActive
                            ? 'exit-free-drive-button'
                            : 'start-free-drive-button'
                    }
                >
                    <MapControlIcon
                        color={
                            freeDriveIsActive
                                ? '#FF4D4F'
...
